dataset1235/2025-2/2947369575/users/2667057248/executions/3873599344_3788368433.log
== RUN (2025-08-20 23:40:07)
-- CODE: 
# Use este codigo como ponto de partida
string = (Gandalf)
# Leitura de valores de entrada 
var = Gandalf
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:33:57)
-- CODE: 
# Use este codigo como ponto de partida
input(Gandalf)
# Leitura de valores de entrada 
var = Gandalf
print(Gandalf)

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:37:36)
-- CODE: 
# Use este codigo como ponto de partida
string(Gandalf)
# Leitura de valores de entrada 
var = string
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string(Gandalf)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string(Gandalf)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string(Gandalf)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string(Gandalf)
    ^^^^^^
NameError: name 'string' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string(Gandalf)
    ^^^^^^
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:41:56)
-- CODE: 
# Use este codigo como ponto de partida
# Leitura de valores de entrada 
var = input()
print(var)

# Impressao de saidas
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:40:09)
-- CODE: 
# Use este codigo como ponto de partida
string = (Gandalf)
# Leitura de valores de entrada 
var = Gandalf
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:31:30)
-- CODE: 
# Use este codigo como ponto de partida
input(Gandalf)
# Leitura de valores de entrada
var = Gandalf
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:24:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Gandalf
print(Gandalf)

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:43:55)
-- CODE: 
# Use este codigo como ponto de partida

#Leitura de valores de entrada 
var = input()
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:41:43)
-- CODE: 
# Use este codigo como ponto de partida
string = (Gandalf)
# Leitura de valores de entrada 
var = input()
print(var)

# Impressao de saidas
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:31:08)
-- CODE: 
# Use este codigo como ponto de partida
input(Gandalf)
# Leitura de valores de entrada
var = Gandalf
print()

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:36:49)
-- CODE: 
# Use este codigo como ponto de partida
input(Gandalf)
# Leitura de valores de entrada 
var = string
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:31:27)
-- CODE: 
# Use este codigo como ponto de partida
input(Gandalf)
# Leitura de valores de entrada
var = Gandalf
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:38:08)
-- CODE: 
# Use este codigo como ponto de partida
string = (Gandalf)
# Leitura de valores de entrada 
var = string
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:25:48)
-- CODE: 
# Use este codigo como ponto de partida
input(richar)
# Leitura de valores de entrada
var = 
print()

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:40:06)
-- CODE: 
# Use este codigo como ponto de partida
string = (Gandalf)
# Leitura de valores de entrada 
var = Gandalf
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string = (Gandalf)
              ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:37:57)
-- CODE: 
# Use este codigo como ponto de partida
string=(Gandalf)
# Leitura de valores de entrada 
var = string
print()

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string=(Gandalf)
            ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string=(Gandalf)
            ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string=(Gandalf)
            ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string=(Gandalf)
            ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    string=(Gandalf)
            ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
